# auto_report_agent

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/src/: custom_logger.py  test.py
backend/src/services/: llm_service.py  mcp_service.py
